rococochain/rococo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: parachain-coll-01-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: parachain-coll-01
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parachain-coll-01
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk:1.0.0-e826631
        imagePullPolicy: Always
        name: parachain-coll-01
        command: ["/basilisk/basilisk"]
        args: ["--chain", "local", "--parachain-id", "2000", "--alice", "--base-path", "/basilisk/", "--node-key", "0000000000000000000000000000000000000000000000000000000000000005", "--bootnodes", "/dns/coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWSuTq6MG9gPt7qZqLFKkYrfxMewTZhj9nmRHJkPwzWDG2", "--", "--chain", "rococo-local", "--bootnodes", "/dns/relaychain-alice-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWQrsgoZoB3FKLbauHYmNM7JWrUhS71pvbkaE5s34VPJAo", "--base [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: parachain-coll-02-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: parachain-coll-02
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parachain-coll-02
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk:1.0.0-e826631
        imagePullPolicy: Always
        name: parachain-coll-02
        command: ["/basilisk/basilisk"]
        args: ["--chain", "local", "--parachain-id", "2000", "--bob", "--base-path", "/basilisk/", "--node-key", "0000000000000000000000000000000000000000000000000000000000000006", "--bootnodes", "/dns/coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWSuTq6MG9gPt7qZqLFKkYrfxMewTZhj9nmRHJkPwzWDG2", "--", "--chain", "rococo-local", "--bootnodes", "/dns/relaychain-alice-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWQrsgoZoB3FKLbauHYmNM7JWrUhS71pvbkaE5s34VPJAo", "--base-p [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: public-rpc-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: public-rpc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: public-rpc
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk:1.0.0-e826631
        imagePullPolicy: Always
        name: public-rpc
        command: ["/basilisk/basilisk"]
        args: ["--chain", "local", "--parachain-id", "2000", "--base-path", "/basilisk/", "--", "--chain", "rococo-local", "--base-path", "/basilisk/", "--execution=wasm", "--unsafe-ws-external"]
        ports:
        - containerPort: 9944
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: coll-01-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933  
  type: NodePort
  selector:
    app.kubernetes.io/name: parachain-coll-01
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: coll-02-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933
      protocol: TCP   
  type: NodePort
  selector:
    app.kubernetes.io/name: parachain-coll-02
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: public-rpc-svc
spec:
  ports:
    - port: 80
      name: websocket
      targetPort: 9944
      protocol: TCP
  type: NodePort    
  selector:
    app.kubernetes.io/name: public-rpc
